kubernetes/kiali/network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kiali
  namespace: monitoring
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: kiali
      app.kubernetes.io/name: kiali
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - port: 15008
          protocol: TCP
        - port: 20001
          protocol: TCP
        - port: 9090
          protocol: TCP
